--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "electron .",
     "install": "electron-rebuild",
     "dist": "build",
-    "package-win": "electron-packager . FORWARDING --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/diana_icon.png --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Forwarding Tool\""
+    "package-win": "electron-packager . FORWARDING --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/efglobal_logo_transparent.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Forwarding Tool\""
   },
   "author": "AG",
   "license": "ISC",
